--- a/frontend/src/pages/login.astro
+++ b/frontend/src/pages/login.astro
@@ -1,9 +1,17 @@
 ---
 import Layout from '../components/Layout.astro';
-import LoginForm from '../components/LoginForm';
-import '../styles/global.css';
+import LoginWrapper from '../components/LoginWrapper';
 ---
 
-<Layout title="Login - NewsFeed">
-  <LoginForm client:load />
+<Layout title="Login">
+  <div class="text-center mb-8">
+    <h1 class="text-3xl font-bold">Welcome Back</h1>
+    <p class="text-gray-600 dark:text-gray-400 mt-2">Please sign in to your account</p>
+  </div>
+  
+  <LoginWrapper client:only="react" />
+  
+  <p class="text-center mt-4 text-gray-600 dark:text-gray-400">
+    Don't have an account? <a href="/register" class="text-primary hover:underline">Sign up</a>
+  </p>
 </Layout> 
